Styling fixes to align items in CircleLifeCounter

--- a/app/components/CircleLifeCounter/style.css
+++ b/app/components/CircleLifeCounter/style.css
@@ -2,10 +2,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    width: 70%;
+    position: relative;
 }
 
 .lifeCounter {
     position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 .circle {
