--- a/app/components/LifeCounter/style.css
+++ b/app/components/LifeCounter/style.css
@@ -3,14 +3,18 @@
     justify-content: center;
     align-items: center;
 
+    height: 100%;
+    width: 100%;
     min-height: 100px;
     min-width: 100px;
-    font-size: 26vw;
+    font-size: 17.5vw;
+
+    border-radius: 50%;
 
     user-select: none;
 }
 
 .arrows {
-    height: 18vw;
+    height: 12vw;
     margin-left: 10px;
 }
